; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-bd9571mwv.c_bd9571mwv_gpio_direction_output.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-bd9571mwv.c_bd9571mwv_gpio_direction_output.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gpio_chip = type { i32 }
%struct.bd9571mwv_gpio = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@BD9571MWV_GPIO_OUT = common dso_local global i32 0, align 4
@BD9571MWV_GPIO_DIR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gpio_chip*, i32, i32)* @bd9571mwv_gpio_direction_output to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bd9571mwv_gpio_direction_output(%struct.gpio_chip* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.gpio_chip*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.bd9571mwv_gpio*, align 8
  store %struct.gpio_chip* %0, %struct.gpio_chip** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.gpio_chip*, %struct.gpio_chip** %4, align 8
  %9 = call %struct.bd9571mwv_gpio* @gpiochip_get_data(%struct.gpio_chip* %8)
  store %struct.bd9571mwv_gpio* %9, %struct.bd9571mwv_gpio** %7, align 8
  %10 = load %struct.bd9571mwv_gpio*, %struct.bd9571mwv_gpio** %7, align 8
  %11 = getelementptr inbounds %struct.bd9571mwv_gpio, %struct.bd9571mwv_gpio* %10, i32 0, i32 0
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @BD9571MWV_GPIO_OUT, align 4
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @BIT(i32 %16)
  %18 = load i32, i32* %6, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %3
  %21 = load i32, i32* %5, align 4
  %22 = call i32 @BIT(i32 %21)
  br label %24

23:                                               ; preds = %3
  br label %24

24:                                               ; preds = %23, %20
  %25 = phi i32 [ %22, %20 ], [ 0, %23 ]
  %26 = call i32 @regmap_update_bits(i32 %14, i32 %15, i32 %17, i32 %25)
  %27 = load %struct.bd9571mwv_gpio*, %struct.bd9571mwv_gpio** %7, align 8
  %28 = getelementptr inbounds %struct.bd9571mwv_gpio, %struct.bd9571mwv_gpio* %27, i32 0, i32 0
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = load i32, i32* @BD9571MWV_GPIO_DIR, align 4
  %33 = load i32, i32* %5, align 4
  %34 = call i32 @BIT(i32 %33)
  %35 = load i32, i32* %5, align 4
  %36 = call i32 @BIT(i32 %35)
  %37 = call i32 @regmap_update_bits(i32 %31, i32 %32, i32 %34, i32 %36)
  ret i32 0
}

declare dso_local %struct.bd9571mwv_gpio* @gpiochip_get_data(%struct.gpio_chip*) #1

declare dso_local i32 @regmap_update_bits(i32, i32, i32, i32) #1

declare dso_local i32 @BIT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
